Fixed Search filter html spacing on project, client, and user screens. Implemented new JS for broken project clear filter button. CT-927

--- a/scct/web/css/clients.css
+++ b/scct/web/css/clients.css
@@ -10,11 +10,8 @@
 	max-height:59vh;
 	overflow-y:auto;
 }
-.field-clientSearchField{
-	float: left;
-	width: 90%;
-}
 #clientSearchCleanFilterButton{
 	width: 32px;
 	cursor: pointer;
+	margin-top: 1px;
 }
